--- a/production/prometheus/prometheus.yml
+++ b/production/prometheus/prometheus.yml
@@ -42,9 +42,7 @@ scrape_configs:
       - source_labels: [__meta_dockerswarm_service_label_xyz_freestuffbot_service_role]
         regex: .+
         action: keep
-      # # Renmoved because I decided I don't care.
-      # - source_labels: [__meta_dockerswarm_service_label_prometheus_job]
-      #   target_label: job
+        target_label: job
 
 
 
