--- a/production/dc-fsb.yaml
+++ b/production/dc-fsb.yaml
@@ -14,6 +14,7 @@ services:
       FSB_NETWORK_THUMBNAILER: "http://thumbnailer"
       FSB_NETWORK_MANAGER: "http://manager"
       FSB_NETWORK_LINK_PROXY: "http://link_proxy"
+      FSB_NETWORK_UMI_ALLOWED_IP_RANGE: "10.0.0.0/16"
       FSB_API_PRIVATE_KEY_URI: "/run/secrets/FSB_API_PRIVATE_KEY"
     networks:
       - redis
@@ -142,6 +143,7 @@ services:
       NODE_ENV: "production"
       FSB_DISCORD_PUBLISHER_RABBIT_URL: "amqp://infra_rabbit"
       FSB_DISCORD_PUBLISHER_FREESTUFF_API_URL: "http://api"
+      FSB_NETWORK_UMI_ALLOWED_IP_RANGE: "10.0.0.0/16"
     networks:
       - metrics
       - rabbits
@@ -169,6 +171,7 @@ services:
       NODE_ENV: "production"
       FSB_APP_PUBLISHER_RABBIT_URL: "amqp://infra_rabbit"
       FSB_APP_PUBLISHER_FREESTUFF_API_URL: "http://api"
+      FSB_NETWORK_UMI_ALLOWED_IP_RANGE: "10.0.0.0/16"
     depends_on:
       - api
     networks:
@@ -196,6 +199,7 @@ services:
       NODE_ENV: "production"
       FSB_THUMBNAILER_PORT: "80"
       FSB_THUMBNAILER_DISCORD_CDN_CHANNEL: "885829282952278038"
+      FSB_NETWORK_UMI_ALLOWED_IP_RANGE: "10.0.0.0/16"
     networks:
       - metrics
       - fsn_tools
@@ -216,6 +220,7 @@ services:
     environment:
       NODE_ENV: "production"
       FSB_LINK_PROXY_PORT: "80"
+      FSB_NETWORK_UMI_ALLOWED_IP_RANGE: "10.0.0.0/16"
     networks:
       - metrics
       - fsn_tools
