--- a/production/dc-monitoring.yaml
+++ b/production/dc-monitoring.yaml
@@ -13,7 +13,7 @@ services:
       - '--storage.tsdb.path=/prometheus'
     networks:
       - metrics
-      # - proxy # REMOVE
+      - proxy # REMOVE
     deploy:
       placement:
         constraints:
