--- a/production/dc-coder.yaml
+++ b/production/dc-coder.yaml
@@ -20,8 +20,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
-      database:
-        condition: service_healthy
+      - database
 
     deploy:
       placement:
