--- a/production/dc-gibu.yaml
+++ b/production/dc-gibu.yaml
@@ -1,10 +1,26 @@
 version: "3.3"
 
 services:
+  runner_chrome:
+    image: zenika/alpine-chrome
+    entrypoint: [
+      "chromium-browser",
+      "--headless",
+      "--disable-gpu",
+      "--disable-software-rasterizer",
+      "--disable-dev-shm-usage",
+      "--no-sandbox",
+      "--remote-debugging-address=0.0.0.0",
+      "--remote-debugging-port=9222"
+    ]
+    networks:
+      - gibu
+
   api_games:
     image: ghcr.io/maanex-gibu/api_games:master
     environment:
       - PORT=80
+      - RUNNER_CHROME_ADDR=runner_chrome:9222
     networks:
       - gibu
     deploy:
