--- a/production/dc-coder.yaml
+++ b/production/dc-coder.yaml
@@ -29,14 +29,9 @@ services:
         - traefik.docker.network=proxy
         - traefik.http.services.devspace.loadbalancer.server.port=3000
         - traefik.http.routers.devspace.entrypoints=https
-        - traefik.http.routers.devspace.rule=Host(`devspace.tude.network`)
+        - traefik.http.routers.devspace.rule=Host(`devspace.tude.network`, `test.devenv.tude.network`)
         - traefik.http.routers.devspace.tls.certresolver=cloudflare
         - traefik.http.routers.devspace.tls.domains[0].main=devspace.tude.network
-        - traefik.http.services.devspaceenv.loadbalancer.server.port=3000
-        - traefik.http.routers.devspaceenv.entrypoints=https
-        - traefik.http.routers.devspaceenv.rule=Host(`test.devenv.tude.network`)
-        - traefik.http.routers.devspaceenv.tls.certresolver=cloudflare
-        - traefik.http.routers.devspaceenv.tls.domains[0].main=test.devenv.tude.network
 
   database:
     image: "postgres:14.2"
