--- a/production/traefik/traefik.yml
+++ b/production/traefik/traefik.yml
@@ -15,11 +15,11 @@ serversTransport:
 entryPoints:
   http:
     address: ":80"
-    # http:
-    #   redirections:
-    #     entryPoint:
-    #       to: https
-    #       scheme: https
+    http:
+      redirections:
+        entryPoint:
+          to: https
+          scheme: https
   https:
     address: ":443"
     # address: ":2053"
