--- a/production/dc-coder.yaml
+++ b/production/dc-coder.yaml
@@ -33,7 +33,8 @@ services:
         - traefik.http.routers.devspace.tls.certresolver=cloudflare
         - traefik.http.routers.devspace.tls.domains[0].main=devspace.tude.network
         - traefik.http.routers.devspaceenv.entrypoints=http
-        - traefik.http.routers.devspaceenv.rule=Host(`test.devenv.tude.network`)
+        # - traefik.http.routers.devspaceenv.rule=Host(`test.devenv.tude.network`)
+        - traefik.http.routers.devspaceenv.rule=HostRegexp(`^.+\.devenv\.tude\.network$`)
 
   database:
     image: "postgres:14.2"
