shuffle around deployment locations

--- a/production/dc-coder.yaml
+++ b/production/dc-coder.yaml
@@ -20,7 +20,7 @@ services:
     deploy:
       placement:
         constraints:
-          - node.hostname == co2
+          - node.role == manager
       update_config:
         parallelism: 1
         delay: 10s
