--- a/production/dc-keycloak.yaml
+++ b/production/dc-keycloak.yaml
@@ -8,6 +8,7 @@ services:
       - KEYCLOAK_ADMIN_PASSWORD=admin
     networks:
       - proxy
+    command: start-dev
     deploy:
       mode: replicated
       replicas: 1
