--- a/production/dc-keycloak.yaml
+++ b/production/dc-keycloak.yaml
@@ -18,11 +18,11 @@ services:
     environment:
       - KEYCLOAK_ADMIN=admin
       - KEYCLOAK_ADMIN_PASSWORD=admin
-      - DB_VENDOR: postgres
-      - DB_ADDR: postgres
-      - DB_DATABASE: postgres
-      - DB_USER: postgres
-      - DB_PASSWORD: ${KEYCLOAK_POSTGRES_PASSWORD}
+      - DB_VENDOR=postgres
+      - DB_ADDR=postgres
+      - DB_DATABASE=postgres
+      - DB_USER=postgres
+      - DB_PASSWORD=${KEYCLOAK_POSTGRES_PASSWORD}
       - PROXY_ADRESS_FORWARDING=true
     networks:
       - db
