--- a/production/dc-keycloak.yaml
+++ b/production/dc-keycloak.yaml
@@ -12,6 +12,12 @@ services:
       - db
     volumes:
       - keycloack_postgres_data:/var/lib/postgresql/data
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints:
+          - node.role == manager
 
   keycloak:
     image: quay.io/keycloak/keycloak:20.0.3
@@ -35,6 +41,9 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+      placement:
+        constraints:
+          - node.role == manager
       update_config:
         parallelism: 1
         delay: 10s
