--- a/production/dc-plausible.yaml
+++ b/production/dc-plausible.yaml
@@ -2,15 +2,19 @@ version: "3.3"
 services:
   plausible_db:
     image: postgres:14-alpine
-    restart: always
     volumes:
       - db-data:/var/lib/postgresql/data
     environment:
       - POSTGRES_PASSWORD=postgres
+    deploy:
+      placement:
+        constraints:
+          - node.hostname == co1
+      mode: replicated
+      replicas: 1
 
   plausible_events_db:
     image: clickhouse/clickhouse-server:22.6-alpine
-    restart: always
     volumes:
       - event-data:/var/lib/clickhouse
       - ./plausible/clickhouse/clickhouse-config.xml:/etc/clickhouse-server/config.d/logging.xml:ro
@@ -19,10 +23,15 @@ services:
       nofile:
         soft: 262144
         hard: 262144
+    deploy:
+      placement:
+        constraints:
+          - node.hostname == co1
+      mode: replicated
+      replicas: 1
 
   plausible:
     image: plausible/analytics:latest
-    restart: always
     command: sh -c "sleep 10 && /entrypoint.sh db createdb && /entrypoint.sh db migrate && /entrypoint.sh run"
     depends_on:
       - plausible_db
@@ -31,6 +40,9 @@ services:
       BASE_URL: debug-c3.tude.network
       SECRET_KEY_BASE: ${PLAUSIBLE_SECRET}
     deploy:
+      placement:
+        constraints:
+          - node.hostname == co1
       mode: replicated
       replicas: 1
       update_config:
