--- a/production/dc-umami.yaml
+++ b/production/dc-umami.yaml
@@ -10,6 +10,7 @@ services:
       - db
     networks:
       - proxy
+      - db
     deploy:
       mode: replicated
       replicas: 1
@@ -34,6 +35,8 @@ services:
       POSTGRES_DB: umami
       POSTGRES_USER: umami
       POSTGRES_PASSWORD: umami
+    networks:
+      - db
     volumes:
       - ./umami/schema.postgresql.sql:/docker-entrypoint-initdb.d/schema.postgresql.sql:ro
       - umami-db-data:/var/lib/postgresql/data
@@ -50,6 +53,8 @@ services:
 networks:
   proxy:
     external: true
+  db:
+    driver: overlay
 
 volumes:
   umami-db-data:
