--- a/production/dc-devenv.yaml
+++ b/production/dc-devenv.yaml
@@ -21,6 +21,8 @@ services:
       timeout: 30s
       retries: 3
     deploy:
+      mode: replicated
+      replicas: 1
       placement:
         constraints:
           - node.hostname == co2
