--- a/production/dc-devenv.yaml
+++ b/production/dc-devenv.yaml
@@ -26,6 +26,27 @@ services:
       placement:
         constraints:
           - node.hostname == co2
+          
+  runner_chrome:
+    image: zenika/alpine-chrome
+    entrypoint: [
+      "chromium-browser",
+      "--headless",
+      "--disable-gpu",
+      "--disable-software-rasterizer",
+      "--disable-dev-shm-usage",
+      "--no-sandbox",
+      "--remote-debugging-address=0.0.0.0",
+      "--remote-debugging-port=9222"
+    ]
+    networks:
+      - devenv
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints:
+          - node.hostname == co2
 
 
 volumes:
